ubiquity (1.99.16) UNRELEASED; urgency=low

  * Go back to using /var/log/oem-config.log for oem-config logging; it's
    convenient and less confusing to have that in a separate file, rather
    than /var/log/installer/debug.
  * Be more explicit in logs when ubiquity is being run as oem-config.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 02 Sep 2009 10:54:57 +0100

ubiquity (1.99.15) karmic; urgency=low

  [ Mario Limonciello ]
  * Mythbuntu frontend:
    - Fix a crash caused by two GtkCellRendererText's having the same
      id.  A recent upload of gtk is less forgiving of this error.
      (LP: #422621)
    - Reconfigure mysql-server-5.1 rather than 5.0 since 5.1 is what's
      now in main.
  * Automatic update of included source packages: console-setup
    1.34ubuntu2, grub-installer 1.42ubuntu1, partman-auto 87ubuntu3,
    partman-base 133ubuntu2, partman-target 62ubuntu2, user-setup
    1.27ubuntu10.

  [ Colin Watson ]
  * Re-enable encrypted home option; apparently all the dependencies are in
    place now.

 -- Mario Limonciello <mario_limonciello@dell.com>  Tue, 01 Sep 2009 12:44:48 -0500

ubiquity (1.99.14) karmic; urgency=low

  [ Roman Shtylman ]
  * Fix for (LP: #419142), could not reproduce so just moved the size 
    display to the same line as % display

  [ Mario Limonciello ]
  * Look for language during the progress loop even if no slides are
    available as the error message is dependent upon it.

 -- Mario Limonciello <Mario_Limonciello@dell.com>  Mon, 31 Aug 2009 10:15:29 -0500

ubiquity (1.99.13) karmic; urgency=low

  [ Colin Watson ]
  * Update translations from Launchpad.
  * Upgrade to Automake 1.11.
  * Recent versions of intltool need GETTEXT_PACKAGE. It's great that that
    new requirement was documented nice and clearly. Oh, wait ...
  * Update desktop translation files against new source text; all languages
    need some retranslation work.
  * Update imported translations from gtk+2.0 2.17.7-0ubuntu3.

  [ Roman Shtylman ]